set input type to num

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<div id="phoneInputContainer">
 								<h3>Find your invitiation</h3>
 								<div id="phoneInputSection">
-									<input type="text" id="guestPhoneInput" class="form-control" placeholder="Enter your phone number">
+									<input type="text" type="number" id="guestPhoneInput" class="form-control" placeholder="Enter your phone number">
 									<button id="submitPhoneButton">Submit</button>
 								</div>
 							</div>
@@ -78,7 +78,7 @@
 										<h4 class="time">3:00 PM-6:30 PM</h4>
 										<div style="flex-direction: column" class="descriptionContainer">
 											<h4><u>Mandatory</u> private gathering with immediate family</h4>
-											<p class="description"><i>731 Tonquin Place Northeast, Leesburg, VA</i></p>
+											<p class="description"><i>731 Tonquin Place Northeast<br>Leesburg, VA</i></p>
 										</div>
 									</div>
 									<div class="iteneraryContainer">
