remove dup type

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<div id="phoneInputContainer">
 								<h3>Find your invitiation</h3>
 								<div id="phoneInputSection">
-									<input type="text" type="number" id="guestPhoneInput" class="form-control" placeholder="Enter your phone number">
+									<input type="tel" id="guestPhoneInput" class="form-control" placeholder="Enter your phone number">
 									<button id="submitPhoneButton">Submit</button>
 								</div>
 							</div>
