--- a/index.html
+++ b/index.html
@@ -47,11 +47,24 @@
 					<h3>Time</h3>
 					<p>7:15 PM - 9:30 PM<br>All guests must be present for the party to be seated. Please arrive on time.</p>
 					<h3>Location</h3>
-					<p>Texas de Brazil - Fairfax<br>11750 Fair Oaks Mall Suite K240, Fairfax, VA 22033<br><a href="https://texasdebrazil.com/locations/fairfax/?utm_source=gmb&utm_medium=yext&y_source=1_NDg4MzA3MjUtNzE1LWxvY2F0aW9uLndlYnNpdGU%3D">Website</a></p>
+					<p>Texas de Brazil - Fairfax<br>11750 Fair Oaks Mall Suite K240, Fairfax, VA 22033</p>
+					<h3>Food</h3>
+					<p>Chef-crafted gourmet salad
+						area, traditional side items and
+						various cuts of beef, lamb, pork,
+						chicken and Brazilian sausage
+						carved tableside.<br>
+						Non-alcoholic beverages
+						(fountain soda, regular coffee
+						and regular iced tea) with
+						complimentary refills.<br>
+						<a href="assets/texas-de-brazil-menu.pdf" target="_blank">Menu</a></p>
+						<p><i>Alcohol is not included, but guests are welcome too purchase their own drinks at the venue.</i><br>
+					</p>
 					<h3>Dress Code</h3>
 					<p>Cocktail attire<br>Suggestions: Women - Cocktail dress or dressy jumpsuits. Mens - Dress shirts and slacks, or business-casual wear.</p>
 					<h3>Contact</h3>
-					<p>For questions, please reach out to Thăng Lê or Thư Trần.</p>
+					<p>For questions, please reach out to Thăng Lê (704-441-6580) or Thư Trần (703-509-7016).</p>
 				</article>
 
 				<!-- RSVP -->
