fix type and minor styling update

--- a/index.html
+++ b/index.html
@@ -96,20 +96,20 @@
 						<div id="privateCelebration" style="display: none;">
 							<h3 style="text-align: center">Itinerary</3>
 								<h4></h4>
-								<div class="iteneraryContainer">
+								<div class="itineraryContainer">
 									<h4 class="time">3:00 PM-6:30 PM</h4>
 									<div style="flex-direction: column" class="descriptionContainer">
 										<h4><u>Mandatory</u> private gathering with immediate family</h4>
 										<p class="description"><i>731 Tonquin Place Northeast<br>Leesburg, VA</i></p>
 									</div>
 								</div>
-								<div class="iteneraryContainer">
+								<div class="itineraryContainer">
 									<h4 class="time">6:30 PM-7:30 PM</h4>
 									<div style="flex-direction: column" class="descriptionContainer">
 										<h4>Depart for dinner</h4>
 									</div>
 								</div>
-								<div class="iteneraryContainer">
+								<div class="itineraryContainer">
 									<h4 class="time">7:30 PM-9:30 PM</h4>
 									<div style="flex-direction: column" class="descriptionContainer">
 										<h4>Birthday dinner with larger family</h4>
