more minor updates

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div class="content">
 				<div class="inner">
 					<h1>Lê Văn Thưởng's<br> 90th Birthday Celebration</h1>
-					<p>We hope you are able to join us to celebrate!</p>
+					<p>We hope you are able to join us on this special day!</p>
 					<h2>06.14.2025</h2>
 				</div>
 			</div>
@@ -49,7 +49,7 @@
 				<h3>Date</h3>
 				<p>Saturday, June 14, 2025</p>
 				<h3>Time</h3>
-				<p>7:15 PM - 9:30 PM<br>All guests must be present for the party to be seated. Please arrive on time.
+				<p>7:15 PM - 9:30 PM<br><i>All guests must be present for the party to be seated. <b>Please arrive on time.</b></i>
 				</p>
 				<h3>Location</h3>
 				<p>Texas de Brazil - Fairfax<br>11750 Fair Oaks Mall Suite K240, Fairfax, VA 22033</p>
@@ -65,8 +65,8 @@
 					complimentary refills.<br>
 					<a href="assets/texas-de-brazil-menu.pdf" target="_blank">Menu</a>
 				</p>
-				<p><i>Alcohol is not included, but guests are welcome too purchase their own drinks at the
-						venue.</i><br>
+				<p><i>Alcohol is not included, but guests are welcome to purchase their own drinks at the
+						bar.</i><br>
 				</p>
 				<h3>Dress Code</h3>
 				<p>Cocktail attire<br>Suggestions: Women - Cocktail dress or dressy jumpsuits. Mens - Dress shirts and
