--- a/index.html
+++ b/index.html
@@ -13,13 +13,6 @@
 
 <body class="is-preload">
 
-	<!-- <section id="banner">
-			<div class="content">
-				<span class="image"><img src="images/landing-page.png" alt="" /></span>
-			</div>
-			<a href="#one" class="goto-next scrolly">Next</a>
-		</section> -->
-
 	<!-- Wrapper -->
 	<div id="wrapper">
 		<!-- Header -->
@@ -30,11 +23,15 @@
 					<h1>Lê Văn Thưởng's<br> 90th Birthday Celebration</h1>
 					<p>We hope you are able to join us on this special day!</p>
 					<h2>06.14.2025</h2>
+					<audio controls autoplay id="audio">
+						<source src="./assets/audio/KHÚC HÁT MỪNG SINH NHẬT - PHAN ĐINH TÙNG.mp3" type="audio/mpeg">
+					  Your browser does not support the audio element.
+					  </audio>
 				</div>
 			</div>
 			<nav>
 				<ul>
-					<li><a href="#details">Details</a></li>
+					<li id="detailsNavButton"><a href="#details">Details</a></li>
 					<li id="rsvpNavButton"><a href="#rsvp">RSVP</a></li>
 				</ul>
 			</nav>
