--- a/index.html
+++ b/index.html
@@ -23,10 +23,6 @@
 					<h1>Lê Văn Thưởng's<br> 90th Birthday Celebration</h1>
 					<p>We hope you are able to join us on this special day!</p>
 					<h2>06.14.2025</h2>
-					<audio controls autoplay id="audio">
-						<source src="./assets/audio/KHÚC HÁT MỪNG SINH NHẬT - PHAN ĐINH TÙNG.mp3" type="audio/mpeg">
-					  Your browser does not support the audio element.
-					  </audio>
 				</div>
 			</div>
 			<nav>
@@ -132,6 +128,10 @@
 
 		<!-- Footer -->
 		<footer id="footer">
+			<audio controls autoplay id="audio" style="display: none">
+				<source src="./assets/audio/KHÚC HÁT MỪNG SINH NHẬT - PHAN ĐINH TÙNG.mp3" type="audio/mpeg">
+			  Your browser does not support the audio element.
+			  </audio>
 			<p class="copyright">PAL</p>
 		</footer>
 
