success and error modal on rsvp submit

--- a/index.html
+++ b/index.html
@@ -120,6 +120,19 @@
 						<ul class="actions" id="rsvpActions" style="display: none;">
 							<li><input type="submit" value="Send RSVP" class="primary" /></li>
 						</ul>
+
+						<div id="successMessage" style="display: none;"">
+							<h3>Thank you</h3>
+							<p>Your RSVP has successfully been sent!</p>
+						</div>
+
+						<div id="errorMessage" style="display: none">
+							<h3>Please try again</h3>
+							<p>An error occurred when submitting your RSVP.</p>
+							<div style="justify-self: end;">
+								<button id="errorCloseButton">Close</button>
+							</div>
+						</div>
 					</div>
 				</div>
 
