--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<nav>
 				<ul>
 					<li id="detailsNavButton"><a href="#details">Details</a></li>
-					<li id="rsvpNavButton"><a href="#rsvp">RSVP</a></li>
+					<!-- <li id="rsvpNavButton"><a href="#rsvp">RSVP</a></li> -->
 				</ul>
 			</nav>
 		</header>
@@ -39,15 +39,15 @@
 			<!-- Details -->
 			<article id="details">
 				<h2 class="major">Event Details</h2>
-				<h3>Date</h3>
-				<p>Saturday, June 14, 2025</p>
-				<h3>Time</h3>
-				<p>7:15 PM - 9:30 PM<br><i>All guests must be present for the party to be seated. <b>Please arrive on time.</b></i>
+				<!-- <h3>Date</h3>
+				<p>Saturday, June 14, 2025</p> -->
+				<!-- <h3>Time</h3>
+				<p>6:00 PM - 9:00 PM<br><i>All guests must be present for the party to be seated. <b>Please arrive on time.</b></i>
 				</p>
 				<h3>Location</h3>
-				<p>Texas de Brazil - Fairfax<br>11750 Fair Oaks Mall Suite K240, Fairfax, VA 22033</p>
-				<h3>Dinner</h3>
-				<p>Chef-crafted gourmet salad
+				<p>J. Gilberts Wood-Fired Steaks & Seafood<br>6930 Old Dominion Dr<br>McLean, VA 22101</p>
+				<h3>Dinner</h3> -->
+				<!-- <p>Chef-crafted gourmet salad
 					area, traditional side items and
 					various cuts of beef, lamb, pork,
 					chicken and Brazilian sausage
@@ -56,11 +56,48 @@
 					(fountain soda, regular coffee
 					and regular iced tea) with
 					complimentary refills.<br>
-					<a href="assets/texas-de-brazil-menu.pdf" target="_blank">Menu</a>
-				</p>
-				<p><i>Alcohol is not included, but guests are welcome to purchase their own drinks at the
+					<a href="assets/Menu.pdf" target="_blank">Menu</a>
+				</p> -->
+				<!-- <p><i>Alcohol is not included, but guests are welcome to purchase their own drinks at the
 						bar.</i><br>
-				</p>
+				</p> -->
+				<!-- <h3>Dress Code</h3>
+				<p>Cocktail attire<br>Suggestions: Women - Cocktail dress or dressy jumpsuits. Mens - Dress shirts and
+					slacks, or business-casual wear.</p>
+				<h3>Contact</h3>
+				<p>For questions, please reach out to Thăng Lê (704-441-6580) or Thư Trần (703-509-7016).</p> -->
+				<!-- Immediate Family Itinerary -->
+				<!-- <hr> -->
+				<div id="privateCelebration">
+					<h3 style="text-align: center; color: #f4c118">Saturday, June 14, 2025</h3>
+						<h4></h4>
+						<div class="itineraryContainer">
+							<h3 class="time">2:00 PM-5:15 PM</h3>
+							<div style="flex-direction: column" class="descriptionContainer">
+								<h3><u>Mandatory</u> pre-celebration & photos</h3>
+								<p class="description"><i>731 Tonquin Place Northeast<br>Leesburg, VA</i></p>
+							</div>
+						</div>
+						<div class="itineraryContainer">
+							<h3 class="time">5:15 PM-6:00 PM</h3>
+							<div style="flex-direction: column" class="descriptionContainer">
+								<h3>Depart for dinner</h3>
+								<p class="description"><i>J Gilbert's Wood-Fired Steaks & Seafood<br>6930 Old Dominion
+										Dr<br>
+										McLean, VA 22101</i></p>
+							</div>
+						</div>
+						<div class="itineraryContainer">
+							<h3 class="time">6:00 PM-9:00 PM</h3>
+							<div style="flex-direction: column" class="descriptionContainer">
+								<h3>Birthday Dinner</h3>
+								<p class="description"><i><a href="assets/Menu.pdf" target="_blank">View Menu</a></i></p>
+								<p class="description"><i>Includes unlimited non-alcoholic beverages (fountain soda, coffee, and iced tea).</i></p>
+								<p class="description"><i>A complimentary first round will be offered, with additional drinks available for purchase at the bar.</i></p>
+							</div>
+						</div>
+				</div>
+				<hr>
 				<h3>Dress Code</h3>
 				<p>Cocktail attire<br>Suggestions: Women - Cocktail dress or dressy jumpsuits. Mens - Dress shirts and
 					slacks, or business-casual wear.</p>
@@ -90,23 +127,24 @@
 							<h3 style="text-align: center">Itinerary</3>
 								<h4></h4>
 								<div class="itineraryContainer">
-									<h4 class="time">3:00 PM-6:30 PM</h4>
+									<h4 class="time">2:00 PM-5:15 PM</h4>
 									<div style="flex-direction: column" class="descriptionContainer">
 										<h4><u>Mandatory</u> private gathering with immediate family</h4>
 										<p class="description"><i>731 Tonquin Place Northeast<br>Leesburg, VA</i></p>
 									</div>
 								</div>
 								<div class="itineraryContainer">
-									<h4 class="time">6:30 PM-7:30 PM</h4>
+									<h4 class="time">5:15 PM-6:00 PM</h4>
 									<div style="flex-direction: column" class="descriptionContainer">
 										<h4>Depart for dinner</h4>
 									</div>
 								</div>
 								<div class="itineraryContainer">
-									<h4 class="time">7:30 PM-9:30 PM</h4>
+									<h4 class="time">6:00 PM-9:00 PM</h4>
 									<div style="flex-direction: column" class="descriptionContainer">
 										<h4>Birthday dinner with larger family</h4>
-										<p class="description"><i>Texas de Brazil - Fairfax</i></p>
+										<p class="description"><i>J Gilbert's Wood-Fired Steaks & Seafood - McLean</i>
+										</p>
 									</div>
 								</div>
 								<hr>
@@ -126,7 +164,7 @@
 							<p>Your RSVP has successfully been sent!</p>
 						</div>
 
-						<div id="errorMessage" style="display: none">
+						<div id=" errorMessage" style="display: none">
 							<h3>Please try again</h3>
 							<p>An error occurred when submitting your RSVP.</p>
 							<div style="justify-self: end;">
@@ -143,8 +181,8 @@
 		<footer id="footer">
 			<audio controls autoplay id="audio" style="display: none">
 				<source src="./assets/audio/KHÚC HÁT MỪNG SINH NHẬT - PHAN ĐINH TÙNG.mp3" type="audio/mpeg">
-			  Your browser does not support the audio element.
-			  </audio>
+				Your browser does not support the audio element.
+			</audio>
 			<p class="copyright">PAL</p>
 		</footer>
 
